test/sema/ambiguous-init-call-with-overloaded-params.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

struct Foo { }
Foo::init(a: int) { }
Foo::init(b: int) { }

func main() {
    // CHECK: 9:9: error: ambiguous reference to 'Foo.init'
    _ = Foo(1)
}
